[project]
name = "vaultscout"
version = "0.1.0"
description = "Semantic search over your Obsidian vault, fully local"
readme = "README.md"
authors = [
    { name = "SkyTger", email = "nickolay.zeynalov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vaultscout = "vaultscout:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
